---
source: crates/ruff_python_parser/tests/fixtures.rs
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..146,
        body: [
            ImportFrom(
                StmtImportFrom {
                    node_index: NodeIndex(None),
                    range: 44..65,
                    module: Some(
                        Identifier {
                            id: Name("os"),
                            range: 54..56,
                            node_index: NodeIndex(None),
                        },
                    ),
                    names: [
                        Alias {
                            range: 64..65,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("*"),
                                range: 64..65,
                                node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                    ],
                    level: 0,
                    is_lazy: true,
                    runtime_level: None,
                },
            ),
            ImportFrom(
                StmtImportFrom {
                    node_index: NodeIndex(None),
                    range: 66..105,
                    module: Some(
                        Identifier {
                            id: Name("__future__"),
                            range: 76..86,
                            node_index: NodeIndex(None),
                        },
                    ),
                    names: [
                        Alias {
                            range: 94..105,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("annotations"),
                                range: 94..105,
                                node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                    ],
                    level: 0,
                    is_lazy: true,
                    runtime_level: None,
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 107..145,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("func"),
                        range: 111..115,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 115..117,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                        runtime_defaults: None,
                    },
                    returns: None,
                    body: [
                        ImportFrom(
                            StmtImportFrom {
                                node_index: NodeIndex(None),
                                range: 123..145,
                                module: Some(
                                    Identifier {
                                        id: Name("sys"),
                                        range: 133..136,
                                        node_index: NodeIndex(None),
                                    },
                                ),
                                names: [
                                    Alias {
                                        range: 144..145,
                                        node_index: NodeIndex(None),
                                        name: Identifier {
                                            id: Name("*"),
                                            range: 144..145,
                                            node_index: NodeIndex(None),
                                        },
                                        asname: None,
                                    },
                                ],
                                level: 0,
                                is_lazy: true,
                                runtime_level: None,
                            },
                        ),
                    ],
                    runtime_decorator_list: None,
                    runtime_type_comment: None,
                    runtime_type_comment_bytes: None,
                    runtime_body: None,
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Semantic Syntax Errors

  |
1 | # parse_options: {"target-version": "3.15"}
2 | lazy from os import *
  | ^^^^^^^^^^^^^^^^^^^^^ Syntax Error: lazy from ... import * is not allowed
3 | lazy from __future__ import annotations
  |


  |
1 | # parse_options: {"target-version": "3.15"}
2 | lazy from os import *
3 | lazy from __future__ import annotations
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Syntax Error: lazy from __future__ import is not allowed
4 |
5 | def func():
  |


  |
5 | def func():
6 |     lazy from sys import *
  |     ^^^^^^^^^^^^^^^^^^^^^^ Syntax Error: lazy from ... import not allowed inside functions
  |


  |
5 | def func():
6 |     lazy from sys import *
  |     ^^^^^^^^^^^^^^^^^^^^^^ Syntax Error: `from sys import *` only allowed at module level
  |
